Bug 1383051 - fixing windows 10 window control alignment and indicator alignment in windows 7. r=jaws
MozReview-Commit-ID: 2aaYqbmjOjI

UltraBlame original commit: 0f94bac50b3701aa729b5fbc395119ce577edb87

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -68,8 +68,10 @@
 #titlebar-secondary-buttonbox {
   position: relative;
   z-index: 1;
-  align-items: center;
-  display: flex;
+}
+
+#titlebar-buttonbox-container {
+  -moz-box-align: center;
 }
 
 
