--- a/browser/themes/shared/browser.inc.css
+++ b/browser/themes/shared/browser.inc.css
@@ -90,6 +90,7 @@
   height: 24px;
   margin-left: 8px;
   margin-right: 8px;
+  position: relative;
   
 
   z-index: 1;
